# my_test

./: CMakeLists.txt  Runtests.sh  gcommand.txt
src/: math.cpp  math.h
tests/: math_test.cpp
